Made several changes to responsive team and expertise pages, fixed extra symbol errors, Fixed Research pages not showing featured images

--- a/src/styles/global/responsive.scss
+++ b/src/styles/global/responsive.scss
@@ -401,4 +401,22 @@
             }
         }
     }
+
+    .research-page {
+        .page-content {
+            .research-post {
+                margin-bottom: $mobile-gutter;
+                .page-sidebar {
+                    order: 1;
+                    margin-top: $mobile-gutter * 2;
+                    padding-bottom: 0px;
+                }
+
+                .page-content {
+                    order: 2;
+                }
+
+            }
+        }
+    }
 }
