--- a/src/styles/layout/pages.scss
+++ b/src/styles/layout/pages.scss
@@ -118,7 +118,7 @@
         padding: $gutter;
 
         .page-sidebar-image {
-            height: 240px;
+            height: auto;
             width: 100%;
 
         }
