--- a/src/styles/layout/team.scss
+++ b/src/styles/layout/team.scss
@@ -18,30 +18,34 @@
 }
 
 .page-team-sidebar-image {
-
-        border-radius: 1000px;
-        
-        width: 235px;
-        height: 235px;
+        width: 100%;
+        height: auto;
         transition: all 500ms ease-in-out;
         margin-bottom: 24px; 
         overflow: hidden;
+        position: relative;
+        border-radius: 1000px;
 
-        &:before {
-            content: '';
+        img {
+            border-radius: 1000px;
+            margin-bottom: 0px;
+        }
+        
+        .icon_team {
             background: $teal url('../images/icon_team.png') no-repeat center;
             background-size: $gutter;
             padding: 73px;
             position: absolute;
-            width: 235px;
-            height: 236px;
+            width: 100%;
+            height: 100%;
             background-color: $teal;
             border-radius: 1000px;
             transition: all 400ms ease-in-out;
             opacity: 0;
+            top: 0px;
         }
 
-            &:hover:before {
+            &:hover .icon_team {
                 opacity: 1;
             }
     
